--- a/pom.xml
+++ b/pom.xml
@@ -317,6 +317,20 @@
 					</configuration>
 				</plugin>
 
+				<plugin>
+					<groupId>org.apache.tomcat.maven</groupId>
+					<artifactId>tomcat7-maven-plugin</artifactId>
+					<version>2.2</version>
+					<configuration>
+						<url>http://localhost:9595/manager/text</url>
+					<!-- 	<server>TomcatServer</server> -->
+					<path>/aaaaashow</path>
+					<username>tomcat</username>
+					<password>tomcat</password>
+					<!--<path>/NEW</path>-->
+					</configuration>
+				</plugin>
+	
 
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
