--- a/pom.xml
+++ b/pom.xml
@@ -322,9 +322,9 @@
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.2</version>
 					<configuration>
-						<url>http://172.27.59.133:9595/manager/text</url>
+						<url>http://172.27.59.133:9595/manager/html</url>
 					<!-- 	<server>TomcatServer</server> -->
-					<path>/aaaaashow</path>
+					<path>/show</path>
 					<username>tomcat</username>
 					<password>tomcat</password>
 			               <warFile>target/*.war</warFile>
