--- a/pom.xml
+++ b/pom.xml
@@ -322,9 +322,9 @@
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.2</version>
 					<configuration>
-						<url>http://local-host:8081//manager/html</url>
+						<url>http://172.27.59.93:8081//manager/html</url>
 					<!-- 	<server>TomcatServer</server> -->
-					<path>/show</path>
+					<path>/showUS</path>
 					<username>tomcat</username>
 					<password>tomcat</password>
 			               <warFile>target/EmployeeApplication.war</warFile>
@@ -332,6 +332,7 @@
 					</configuration>
 				</plugin>
 	
+				
 
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
