--- a/pom.xml
+++ b/pom.xml
@@ -322,7 +322,7 @@
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.2</version>
 					<configuration>
-						<url>http://172.27.59.93:8081//manager/html</url>
+						<url>http://172.27.59.93:8081//manager/text</url>
 					<!-- 	<server>TomcatServer</server> -->
 					<path>/showUS</path>
 					<username>tomcat</username>
